# gerador_quantitativo

./: README.md  config.py  local_test.ipynb  pyproject.toml  settings.toml
scripts/pipelines/: pipeline.py
src/database/: fields_to_dissolve.py  fields_to_keep.py  supported_themes.py  tradutor.py
src/feature_formatting/: format_feature_class.py
src/geometric_analysis/: interception_analysis.py  near_analysis.py
src/refact_gerador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/table_conversion/: xlsx_conversion.py
